--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "jsnext:main": "dist/transpozor.js",
   "scripts": {
     "build": "node_modules/.bin/rollup -c",
-    "dev": "node_modules/.bin/watch 'npm run build' src",
+    "dev": "npm run build -- -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,7 +19,14 @@
   ],
   "license": "ISC",
   "devDependencies": {
-    "rollup": "^0.33.0",
-    "watch": "^0.19.1"
+    "rollup": "^0.41.4",
+    "rollup-plugin-buble": "^0.15.0",
+    "rollup-watch": "^3.2.2"
+  },
+  "_devDependencies": {
+    "rollup-plugin-commonjs": "^7.0.0",
+    "rollup-plugin-json": "^2.1.0",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-uglify": "^1.0.1"
   }
 }
